<resources>
    <string name="app_name">Home Poker Tournement</string>
    <string name="action_settings">Settings</string>

    <string name="Buyin"> BUYIN: \n %1$d </string>
    <string name="Cashout"> CASHOUT: \n %1$d </string>
    <string name="Total"> Total: \n %1$d </string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="PlayerNameError">Player name cannot be blank </string>
    <string name="AddedPlayer">Successfully added %1$s</string>
    <string name="Blinds">Blinds %1$d/%2$d</string>
    <string name="AddPlayer">Add new player</string>
    <string name="ViewPlayer">View Players</string>
    <string name="NewTournament">Create new Tournament</string>
    <string name="Game">Game</string>
    <string name="TimeLeft">%1$d:%2$d</string>
    <string name="TimeLeftWithPadding">%1$d:0%2$d</string>
    <string name="StartDate">Start Date</string>
    <string name="StartTime">Start Time</string>
    <string name="NumberOfPlayers">Number of Players</string>
    <string name="Cost">Cost</string>
    <string name="Title_tournamentprogress">Tournament in Progress</string>
    <string name="editChipCount">New Chip Count</string>
    <string name="tournamentPreview">Preview Tournament</string>
    <string name="StartTournamenet">Start Tournament</string>
    <string name="prize"> $%1$.2f </string>
    <string name="Round"> Round %1$d</string>
    <string name="position">#%1$d</string>
    <string name="PlayerNamer"> Player Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="Bust">Bust</string>
    <string name="Update">Update</string>
    <string name="CostDispley">Cost: \n  %1$s</string>
    <string name="DateDispley">Date: \n %1$s</string>
    <string name="Break">On Break</string>
    <string name="tournamentInProgress">Tournament in Progress </string>
    <string name="Overtime">Overtime</string>
    <string name="Congrats">Congrats %1$s</string>
    <string name="toggleupcoming_past">Toggle Upcoming/Past</string>
    <string name="pokerimage">PokerImage</string>
    <string name="upcoming_tournaments">Upcoming Tournaments</string>
    <string name="previous_Tournaments">Previous Tournaments</string>
    <string name="Tournament_Results">Tournament Results</string>
    <string-array name="GameList">
        <item> "Texas Hold em"</item>
        <item> "Omaha</item>
        <item> "7 Card Stud"</item>
        <item> "5 Card Draw</item>
    </string-array>
</resources>
