<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/GameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/GameList"
        android:prompt="@string/Game" />

    <EditText
        android:id="@+id/StartDate"
        style="@style/DefaultEditText"
        android:hint="@string/StartDate"
        android:inputType="datetime" />

    <EditText
        android:id="@+id/StartTime"
        style="@style/DefaultEditText"
        android:hint="@string/StartTime"
        android:inputType="datetime" />

    <EditText
        android:id="@+id/costEditText"
        style="@style/DefaultEditText"
        android:hint="@string/Cost"
        android:inputType="number" />

    <Button
        android:id="@+id/NewTournament"
        style="@style/DefaultButton"
        android:text="@string/NewTournament" />

</LinearLayout>